# fnple-rust

./: Cargo.toml  README.md  TODO.md
components/fnple-cli/: Cargo.toml
components/fnple-cli/src/: main.rs
components/ledger/: Cargo.toml
components/ledger/src/: main.rs
components/ledger/src/account/: model.rs  service.rs
components/ledger/src/account/data/: in_memory_repository.rs  mod.rs  repository.rs
components/ledger/src/entry/: model.rs  service.rs
components/ledger/testing/curl/: account.rest
scripts/: db.sh  docker-clean-all.sh  docker-clean.sh
