[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = { version = "1.20", features = ["full"] }
tokio-postgres = "0.7"

serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
uuid = { version = "1.1.2", features = ["v4","serde"] }
dotenv = "0.15.0"
chrono = { version="0.4", features = ["serde"] }
refinery = { version = "0.8", features = ["rusqlite"]}
postgres = "0.19.3"
r2d2 = "0.8.10"
